# trash

./: .editorconfig  .gitignore  .hlint.yaml  README.md  stack.yaml
.github/workflows/: haskell.yml
trash/: README.md  trash.cabal
trash/executables/: Main.hs
trash/src/: CommandHelpers.hs  FileManager.hs  FileSystem.hs  Gui.hs  Main.hs  Parsers.hs  PathUtils.hs  Paths_trash.hs  RealIO.hs  Shell.hs  ShellData.hs  Tracker.hs
trash/src/FileManager/: Lib.hs
trash/src/Tracker/: Lib.hs
