name:                trash
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Trash: The Tracker Shell

homepage:            https://github.com/fp-ctd-itmo/hw2-IlyaBizyaev
license:             GPL-3
license-file:        LICENSE
author:              Ilya Bizyaev
maintainer:          me@ilyabiz.com
copyright:           2020 Ilya Bizyaev

category:            Shell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     FileManager.Lib
                     , Tracker.Lib
  -- other-modules:
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.9 && < 5
                     , directory
  default-language:    Haskell2010

executable trash
  hs-source-dirs:      executables
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -Wall -Werror
  build-depends:       base >=4.9 && < 5
                     , mtl
                     , optparse-applicative
                     , trash
  default-language:    Haskell2010
