name:                trash
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Trash: The Tracker Shell

homepage:            https://github.com/fp-ctd-itmo/hw2-IlyaBizyaev
license:             GPL-3
license-file:        LICENSE
author:              Ilya Bizyaev
maintainer:          me@ilyabiz.com
copyright:           2020 Ilya Bizyaev

category:            Shell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

executable trash
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Shell
                     , ShellData
                     , Gui
                     , Parsers
                     , CommandHelpers
                     , FileManager
                     , Tracker
                     , FileSystem
                     , Paths_trash
  -- other-extensions:
  ghc-options:         -Wall
  build-depends:       base >=4.9 && < 5
                     , mtl
                     , time
                     , bytestring
                     , containers
                     , optparse-applicative
                     , directory
                     , filepath
                     , text
                     , mime-types
  default-language:    Haskell2010
